#1141 Arnaud & Danny: Use common-codecs for Base64 encoding/decoding. Minor renamings and refactorings.